--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@ font-weight: 400 !important;
 line-height: 150% !important;
 }
 
+svg{
+    fill: #0E151B;
+}
+
+svg:hover{
+    fill: #F29F05;
+}
+
 .nav-bar{
     border-bottom: 1px solid #FFF;
 background: rgba(255, 255, 255, 0.40);
@@ -79,7 +87,7 @@ color: #F29F05 !important;
     color: white !important;
 }
 
-.cta{
+.cta-bg{
     background: #FCE8C3;
     margin: 0 !important;
     width: 100vw;
@@ -94,10 +102,23 @@ color: #F29F05 !important;
     color: #C27E00 !important;
 }
 
+/*.cta{
+    background: #FCE8C3;
+    margin: 0 !important;
+    width: 100vw;
+    overflow: visible;
+}
+
+*/
+
 /*footer*/
-.footer{
+/*.footer{
     background-image: url(./footer\ bg.png);
     width: 100vw;
+}*/
+
+.footer-bg{
+    background-image: url(./footer\ bg.png);
 }
 
 h5{
@@ -121,66 +142,6 @@ line-height: 56px; /* 280% */
 
 span{
     font-weight: bold;
-}
-
-
-
-
-
-
-
-/*Human CTA*/
-.flex-container{
-    display: flex;
-    padding: 60px 100px 0px 100px;
-    flex-direction: column;
-    align-items: center;
-    gap: 17px;
-    align-self: stretch;    
-}
-
-.flex-child{
-    display: flex;
-    width: 905px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
-}
-
-.secondary{
-    padding: 10px 32px;
-    border-radius: 50px;
-    background-color: #DBDBDB;
-    border: #F29F05 solid 1px;
-}
-
-.secondary>a{
-    color: #F29F05;
-    text-decoration: none;
-}
-
-.secondary:hover{
-    background-color: #F29F05;
-    border: #F29F05 solid 1px;
-}
-
-.secondary>a:hover{
-    color: #ffffff;
-    text-decoration: none;
-}
-
-.img{
-    height: 540px;
-align-self: stretch;
-aspect-ratio: 1240/537;
-}
-
-.rectangle{
-    width: 1440px;
-height: 753px;
-position: absolute;
-background: rgba(242, 159, 5, 0.24);
 }
 
 
